added Executed in Recommendation, PainTrendRuleApplier was updated and tested, small changes at Doctor Workflow