@@ -23,11 +23,14 @@ import pain_helper_back.treatment_protocol.service.TreatmentProtocolService;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.Set;
-import java.util.stream.Collectors;
+
+
+import static java.util.stream.Collectors.toList;
+
 @Slf4j
 @Service
 @RequiredArgsConstructor
@@ -38,9 +41,6 @@ public class NurseServiceImpl implements NurseService {
     private final ModelMapper modelMapper;
     private final ApplicationEventPublisher eventPublisher;
     private final RecommendationRepository recommendationRepository;
-
-
-
 
 
     private Patient findPatientOrThrow(String mrn) {
@@ -88,23 +88,22 @@ public class NurseServiceImpl implements NurseService {
     public List<PatientDTO> searchPatients(String firstName, String lastName, Boolean isActive, LocalDate birthDate) {
         if (firstName != null && lastName != null) {
             List<Patient> patients = patientRepository.getPatientsByFirstNameAndLastName(firstName, lastName);
-            return patients.stream().map(patient -> modelMapper.map(patient, PatientDTO.class)).collect(Collectors.toList());
+            return patients.stream().map(patient -> modelMapper.map(patient, PatientDTO.class)).collect(toList());
         }
         if (isActive != null) {
             List<Patient> patients = patientRepository.findByIsActive(isActive);
-            return patients.stream().map(p -> modelMapper.map(p, PatientDTO.class)).collect(Collectors.toList());
+            return patients.stream().map(p -> modelMapper.map(p, PatientDTO.class)).collect(toList());
         }
         if (birthDate != null) {
             List<Patient> patients = patientRepository.findByDateOfBirth(birthDate);
-            return patients.stream().map(p -> modelMapper.map(p, PatientDTO.class)).collect(Collectors.toList());
+            return patients.stream().map(p -> modelMapper.map(p, PatientDTO.class)).collect(toList());
         } else {
             List<Patient> patients = patientRepository.findAll();
             return patients.stream()
                     .map(patient -> modelMapper.map(patient, PatientDTO.class))
-                    .collect(Collectors.toList());
+                    .collect(toList());
         }
     }
-
 
 
     @Override
@@ -275,8 +274,8 @@ public class NurseServiceImpl implements NurseService {
     public Optional<VasDTO> getLastVAS(String mrn) {
         Patient patient = findPatientOrThrow(mrn);
         if (patient.getVas().isEmpty()) {
-           log.warn("No VAS found for patient with MRN={}", mrn);
-           return Optional.empty();
+            log.warn("No VAS found for patient with MRN={}", mrn);
+            return Optional.empty();
         }
         Vas vas = patient.getVas().getLast();
         VasDTO dto = modelMapper.map(vas, VasDTO.class);
@@ -288,7 +287,7 @@ public class NurseServiceImpl implements NurseService {
     @Transactional(readOnly = true)
     public List<RecommendationDTO> getAllApprovedRecommendations() {
         // 1. Достаём из базы все рекомендации, у которых статус = PENDING
-        List<Recommendation> recommendations = recommendationRepository.findByStatus(RecommendationStatus.FINAL_APPROVED);
+        List<Recommendation> recommendations = recommendationRepository.findByStatus(RecommendationStatus.APPROVED);
         // 2. Пробегаемся по каждой найденной рекомендации и формируем комбинированный DTO
         return recommendations.stream().map(recommendation -> {
             // 2.1. Получаем MRN пациента, которому принадлежит эта рекомендация
@@ -306,41 +305,38 @@ public class NurseServiceImpl implements NurseService {
     @Transactional
     public RecommendationDTO createRecommendation(String mrn) {
         long startTime = System.currentTimeMillis();
-        
+
         Patient patient = findPatientOrThrow(mrn);
         Emr emr = patient.getEmr().getLast();
         Vas vas = patient.getVas().getLast();
 
-        Recommendation recommendation = treatmentProtocolService.generateRecommendation( vas, patient);
+        Recommendation recommendation = treatmentProtocolService.generateRecommendation(vas, patient);
         vas.setResolved(true);
 
-
-        // 🔹 Алгоритм генерации рекомендации
         // Проверка на существование рекомендации со статусом PENDING
-//        if (patient.getRecommendations().stream().anyMatch(r -> r.getStatus().equals("PENDING"))) {
-//            throw new EntityExistsException("Recommendation with this status already exists");
-//        }
-
+        if (patient.getRecommendations().getLast().getStatus() != RecommendationStatus.EXECUTED) {
+            throw new EntityExistsException("Previous recommendation is still unresolved");
+        }
 
         recommendation.setPatient(patient);
         patient.getRecommendations().add(recommendation);
         patientRepository.save(patient);
-        
+
         long processingTime = System.currentTimeMillis() - startTime;
-        
+
         // Извлекаем диагнозы для аналитики
         List<String> diagnosisCodes = emr.getDiagnoses() != null ?
                 emr.getDiagnoses().stream().map(Diagnosis::getIcdCode).toList() : new ArrayList<>();
-        
+
         // Извлекаем названия препаратов и дозировки из списка drugs
         List<String> drugNames = recommendation.getDrugs() != null ?
                 recommendation.getDrugs().stream().map(DrugRecommendation::getDrugName).toList() : new ArrayList<>();
         List<String> dosages = recommendation.getDrugs() != null ?
                 recommendation.getDrugs().stream().map(DrugRecommendation::getDosing).toList() : new ArrayList<>();
-        String route = recommendation.getDrugs() != null && !recommendation.getDrugs().isEmpty() && 
-                       recommendation.getDrugs().get(0).getRoute() != null ?
-                recommendation.getDrugs().get(0).getRoute().name() : "UNKNOWN";
-        
+        String route = recommendation.getDrugs() != null && !recommendation.getDrugs().isEmpty() &&
+                recommendation.getDrugs().getFirst().getRoute() != null ?
+                recommendation.getDrugs().getFirst().getRoute().name() : "UNKNOWN";
+
         // Публикация события создания рекомендации
         eventPublisher.publishEvent(new RecommendationCreatedEvent(
                 this,
@@ -355,14 +351,58 @@ public class NurseServiceImpl implements NurseService {
                 processingTime,
                 diagnosisCodes
         ));
-        
+
+        return modelMapper.map(recommendation, RecommendationDTO.class);
+    }
+
+    @Override
+    @Transactional
+    public RecommendationDTO executeRecommendation(String mrn) {
+        //  Находим пациента и его последнюю рекомендацию
+        Patient patient = findPatientOrThrow(mrn);
+        Recommendation recommendation = patient.getRecommendations().getLast();
+        //  Проверяем, что её можно исполнить
+        if (recommendation.getStatus() != RecommendationStatus.APPROVED) {
+            throw new IllegalStateException("Only approved recommendations can be executed.");
+        }
+        //  Получаем список препаратов для комментария
+        List<String> drugNames = recommendation.getDrugs()
+                .stream()
+                .map(drugRecommendation -> drugRecommendation.getDrugName() != null && drugRecommendation.getDrugName().isBlank()
+                        ? drugRecommendation.getDrugName()
+                        : drugRecommendation.getActiveMoiety()
+                )
+                .toList();
+        //  Идентификатор текущей медсестры (временно — заглушка)
+        String nurseId = "NurseId"; // TODO: заменить на SecurityContextHolder.getContext().getAuthentication().getName()
+        //  Формируем красивое системное сообщение
+        String comment = String.format("""
+                        [SYSTEM]  Recommendation executed by Nurse: %s
+                        Patient MRN: %s
+                        Executed at: %s
+                        Drugs administered: %s
+                        """,
+                nurseId,
+                patient.getMrn(),
+                LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm")),
+                String.join(", ", drugNames)
+        );
+        // Добавляем комментарий и обновляем статус
+        recommendation.getComments().add(comment);
+        recommendation.setStatus(RecommendationStatus.EXECUTED);
+        recommendation.setUpdatedBy(nurseId);
+        recommendation.setUpdatedAt(LocalDateTime.now());
+        // Сохраняем (каскадное сохранение драг-ов произойдёт автоматически)
+        recommendationRepository.save(recommendation);
+        // (в будущем) публикуем Event для аналитики
+        //TODO eventPublisher.publishEvent(new RecommendationExecutedEvent(...));
         return modelMapper.map(recommendation, RecommendationDTO.class);
     }
 
 
     @Override
     @Transactional(readOnly = true)
-    public Optional <RecommendationDTO> getLastRecommendation(String mrn) {
+    public Optional<RecommendationDTO> getLastRecommendation(String mrn) {
         Patient patient = findPatientOrThrow(mrn);
         if (patient.getRecommendations().isEmpty()) {
             log.warn("No recommendation found for patient with MRN={}", mrn);
